--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "require": {
         "php": "^7.3.0|^8.0|^8.1",
         "guzzlehttp/guzzle": "^6.0|^7.0",
-        "illuminate/notifications": "^6.0|^7.0|^8.0|^9.0|^10.0"
+        "illuminate/notifications": "^6.0|^7.0|^8.0|^9.0|^10.0|^11.0"
     },
     "require-dev": {
         "mockery/mockery": "^1.3",
